feat: search and pagination integration on BE & FE
